[gd_scene load_steps=15 format=3 uid="uid://c5cwtc8ju1qo8"]

[ext_resource type="Script" path="res://script/stage.gd" id="1_kwljp"]
[ext_resource type="Texture2D" uid="uid://btulhximx4ipk" path="res://assets/TileSet-36x36.png" id="2_dudfp"]
[ext_resource type="Texture2D" uid="uid://bypr7geaxgoxo" path="res://assets/Background.png" id="2_we4xe"]
[ext_resource type="PackedScene" uid="uid://wl3spmi4pb7r" path="res://scene/player.tscn" id="3_a5pra"]
[ext_resource type="PackedScene" uid="uid://4rusnto7ieai" path="res://scene/batenemy.tscn" id="5_e0xvv"]
[ext_resource type="PackedScene" uid="uid://b20o2407ira2k" path="res://scene/scene_transition_animation.tscn" id="6_pcb0q"]
[ext_resource type="PackedScene" uid="uid://d2wpa73axbit1" path="res://scene/toxic_frog.tscn" id="7_wouiy"]
[ext_resource type="Script" path="res://script/current_score.gd" id="8_y1qv3"]
[ext_resource type="Script" path="res://script/current_wave.gd" id="9_1cex7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o64i3"]
texture = ExtResource("2_dudfp")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
4:4/0 = 0
6:4/0 = 0
0:1/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_hhsl7"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_o64i3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wyi3"]
size = Vector2(122, 456)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1211"]
size = Vector2(1899, 122)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4y5o"]
size = Vector2(101.5, 691)

[node name="stage" type="Node2D"]
script = ExtResource("1_kwljp")
bat_scene = ExtResource("5_e0xvv")
frog_scene = ExtResource("7_wouiy")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(991.5, 136)
scale = Vector2(5.65526, 3.6)
texture = ExtResource("2_we4xe")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_hhsl7")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 1, 1, 131072, 1, 2, 196608, 1, 3, 131072, 1, 4, 196608, 1, 5, 262144, 1, 65536, 65536, 2, 131072, 65536, 2, 196608, 65536, 2, 262144, 65536, 2, 327680, 65536, 2, 393216, 65536, 2, 65541, 131072, 2, 131077, 131072, 2, 196613, 131072, 2, 262149, 131072, 2, 327685, 131072, 2, 393221, 131072, 2, 458757, 131072, 2, 524293, 131072, 2, 589829, 131072, 2, 458752, 65536, 2, 524288, 65536, 2, 589824, 65536, 2, 65537, 131072, 2, 65538, 196608, 2, 131073, 131072, 2, 131074, 196608, 2, 196609, 131072, 2, 196610, 196608, 2, 262145, 131072, 2, 262146, 196608, 2, 327681, 131072, 2, 327682, 196608, 2, 393217, 131072, 2, 393218, 196608, 2, 458753, 131072, 2, 458754, 196608, 2, 524289, 131072, 2, 524290, 196608, 2, 589825, 131072, 2, 589826, 196608, 2, 65539, 131072, 2, 65540, 196608, 2, 131075, 131072, 2, 131076, 196608, 2, 196611, 131072, 2, 196612, 196608, 2, 262147, 131072, 2, 262148, 196608, 2, 327683, 131072, 2, 327684, 196608, 2, 393219, 131072, 2, 393220, 196608, 2, 458755, 131072, 2, 458756, 196608, 2, 524291, 131072, 2, 524292, 196608, 2, 589827, 131072, 2, 589828, 196608, 2, 655360, 65536, 1, 655361, 131072, 1, 655362, 196608, 1, 655363, 131072, 1, 655364, 196608, 1, 655365, 131072, 1, 655366, 196608, 1, 655367, 131072, 1, 655368, 196608, 1, 655369, 131072, 1, 655370, 196608, 1, 655371, 131072, 1, 655372, 196608, 1, 655373, 131072, 1, 655374, 196608, 1, 655375, 131072, 1, 655376, 196608, 1, 655377, 131072, 1, 655378, 196608, 1, 655379, 131072, 1, 655380, 196608, 1, 655381, 131072, 1, 655382, 196608, 1, 655383, 131072, 1, 655384, 196608, 1, 655385, 131072, 1, 655386, 196608, 1, 655387, 131072, 1, 655388, 196608, 1, 655389, 131072, 1, 655390, 196608, 1, 655391, 131072, 1, 655392, 196608, 1, 655393, 131072, 1, 655394, 196608, 1, 655395, 131072, 1, 655396, 196608, 1, 655397, 131072, 1, 655398, 196608, 1, 655399, 131072, 1, 655400, 196608, 1, 655401, 131072, 1, 655402, 196608, 1, 655403, 131072, 1, 655404, 196608, 1, 655405, 131072, 1, 655406, 196608, 1, 655407, 131072, 1, 655408, 196608, 1, 655409, 131072, 1, 655410, 196608, 1, 655411, 131072, 1, 655412, 196608, 1, 655413, 131072, 1, 655414, 196608, 1, 655415, 131072, 1, 655416, 196608, 1, 655417, 131072, 1, 655418, 262144, 1, 720896, 65536, 2, 786432, 65536, 2, 851968, 65536, 2, 720954, 262144, 2, 786490, 262144, 2, 852026, 262144, 2, 524345, 327680, 0, 589881, 327680, 1, 589882, 327680, 1, 393274, 393216, 2, 458810, 393216, 3, 524346, 393216, 4, 720897, 131072, 2, 720898, 196608, 2, 786433, 131072, 2, 786434, 196608, 2, 851969, 131072, 2, 851970, 196608, 2, 720899, 131072, 2, 720900, 196608, 2, 786435, 131072, 2, 786436, 196608, 2, 851971, 131072, 2, 851972, 196608, 2, 720901, 131072, 2, 720902, 196608, 2, 786437, 131072, 2, 786438, 196608, 2, 851973, 131072, 2, 851974, 196608, 2, 720903, 131072, 2, 720904, 196608, 2, 786439, 131072, 2, 786440, 196608, 2, 851975, 131072, 2, 851976, 196608, 2, 720905, 131072, 2, 720906, 196608, 2, 786441, 131072, 2, 786442, 196608, 2, 851977, 131072, 2, 851978, 196608, 2, 720907, 131072, 2, 720908, 196608, 2, 786443, 131072, 2, 786444, 196608, 2, 851979, 131072, 2, 851980, 196608, 2, 720909, 131072, 2, 720910, 196608, 2, 786445, 131072, 2, 786446, 196608, 2, 851981, 131072, 2, 851982, 196608, 2, 720911, 131072, 2, 720912, 196608, 2, 786447, 131072, 2, 786448, 196608, 2, 851983, 131072, 2, 851984, 196608, 2, 720913, 131072, 2, 720914, 196608, 2, 786449, 131072, 2, 786450, 196608, 2, 851985, 131072, 2, 851986, 196608, 2, 720915, 131072, 2, 720916, 196608, 2, 786451, 131072, 2, 786452, 196608, 2, 851987, 131072, 2, 851988, 196608, 2, 720917, 131072, 2, 720918, 196608, 2, 786453, 131072, 2, 786454, 196608, 2, 851989, 131072, 2, 851990, 196608, 2, 720919, 131072, 2, 720920, 196608, 2, 786455, 131072, 2, 786456, 196608, 2, 851991, 131072, 2, 851992, 196608, 2, 720921, 131072, 2, 720922, 196608, 2, 786457, 131072, 2, 786458, 196608, 2, 851993, 131072, 2, 851994, 196608, 2, 720923, 131072, 2, 720924, 196608, 2, 786459, 131072, 2, 786460, 196608, 2, 851995, 131072, 2, 851996, 196608, 2, 720925, 131072, 2, 720926, 196608, 2, 786461, 131072, 2, 786462, 196608, 2, 851997, 131072, 2, 851998, 196608, 2, 720927, 131072, 2, 720928, 196608, 2, 786463, 131072, 2, 786464, 196608, 2, 851999, 131072, 2, 852000, 196608, 2, 720929, 131072, 2, 720930, 196608, 2, 786465, 131072, 2, 786466, 196608, 2, 852001, 131072, 2, 852002, 196608, 2, 720931, 131072, 2, 720932, 196608, 2, 786467, 131072, 2, 786468, 196608, 2, 852003, 131072, 2, 852004, 196608, 2, 720933, 131072, 2, 720934, 196608, 2, 786469, 131072, 2, 786470, 196608, 2, 852005, 131072, 2, 852006, 196608, 2, 720935, 131072, 2, 720936, 196608, 2, 786471, 131072, 2, 786472, 196608, 2, 852007, 131072, 2, 852008, 196608, 2, 720937, 131072, 2, 720938, 196608, 2, 786473, 131072, 2, 786474, 196608, 2, 852009, 131072, 2, 852010, 196608, 2, 720939, 131072, 2, 720940, 196608, 2, 786475, 131072, 2, 786476, 196608, 2, 852011, 131072, 2, 852012, 196608, 2, 720941, 131072, 2, 720942, 196608, 2, 786477, 131072, 2, 786478, 196608, 2, 852013, 131072, 2, 852014, 196608, 2, 720943, 131072, 2, 720944, 196608, 2, 786479, 131072, 2, 786480, 196608, 2, 852015, 131072, 2, 852016, 196608, 2, 720945, 131072, 2, 720946, 196608, 2, 786481, 131072, 2, 786482, 196608, 2, 852017, 131072, 2, 852018, 196608, 2, 720947, 131072, 2, 720948, 196608, 2, 786483, 131072, 2, 786484, 196608, 2, 852019, 131072, 2, 852020, 196608, 2, 720949, 131072, 2, 720950, 196608, 2, 786485, 131072, 2, 786486, 196608, 2, 852021, 131072, 2, 852022, 196608, 2, 720951, 131072, 2, 720952, 196608, 2, 786487, 131072, 2, 786488, 196608, 2, 852023, 131072, 2, 852024, 196608, 2, 720953, 131072, 2, 786489, 131072, 2, 852025, 131072, 2, 589832, 262144, 0, 589838, 65536, 0, 589841, 65536, 0, 589844, 262144, 0, 589847, 65536, 0, 589850, 65536, 0, 589852, 65536, 0, 589856, 65536, 0, 589860, 65536, 0, 589864, 65536, 0, 589868, 65536, 0, 589872, 65536, 0, 589873, 65536, 0, 589874, 65536, 0, 589878, 65536, 0, 589880, 65536, 0, 589879, 262144, 0, 589877, 262144, 0, 589876, 262144, 0, 589875, 262144, 0, 589871, 262144, 0, 589869, 262144, 0, 589870, 262144, 0, 589867, 262144, 0, 589865, 262144, 0, 589866, 262144, 0, 589863, 262144, 0, 589861, 262144, 0, 589862, 262144, 0, 589859, 262144, 0, 589858, 262144, 0, 589857, 262144, 0, 589854, 262144, 0, 589853, 262144, 0, 589855, 262144, 0, 589851, 262144, 0, 589849, 262144, 0, 589848, 262144, 0, 589846, 262144, 0, 589845, 262144, 0, 589843, 262144, 0, 589842, 262144, 0, 589840, 262144, 0, 589837, 262144, 0, 589835, 262144, 0, 589834, 262144, 0, 589833, 262144, 0, 589830, 262144, 0, 589831, 65536, 0, 589836, 65536, 0, 589839, 65536, 0)
layer_1/name = "Layer1"
layer_1/tile_data = PackedInt32Array(589833, 131072, 0, 589838, 131072, 0, 589842, 131072, 0, 589846, 131072, 0, 589849, 131072, 0, 589850, 196608, 0, 589852, 131072, 0, 589853, 131072, 0, 589860, 131072, 0, 589867, 131072, 0, 589870, 131072, 0, 589874, 131072, 0, 589877, 131072, 0, 589880, 131072, 0, 589879, 196608, 0, 589876, 196608, 0, 589872, 196608, 0, 589868, 196608, 0, 589863, 196608, 0, 589858, 196608, 0, 589856, 196608, 0, 589847, 196608, 0, 589843, 196608, 0, 589837, 196608, 0, 589830, 196608, 0)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="leftcollision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-43, 229)
shape = SubResource("RectangleShape2D_4wyi3")

[node name="bottomcollision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(948.5, 390)
shape = SubResource("RectangleShape2D_g1211")

[node name="rightcollision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1933, 99)
shape = SubResource("RectangleShape2D_f4y5o")

[node name="player" parent="." instance=ExtResource("3_a5pra")]
position = Vector2(212, 18)

[node name="batOnlyCollision" type="StaticBody2D" parent="."]
position = Vector2(18, 310)
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="batOnlyCollision"]
polygon = PackedVector2Array(-1, 4, 1880, 2, 1854, -287, 1849, -350, -6, -321, -13, 6, -108, 0, -118, -387, 1051, -494, 1928, -497, 2013, 34, 1970, 128, 1237, 158, 740, 149, -6, 125)

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("6_pcb0q")]
position = Vector2(1, 47)

[node name="batspawnpoint" type="Marker2D" parent="."]
position = Vector2(1267, 236)

[node name="batspawnpoint2" type="Marker2D" parent="."]
position = Vector2(916, 236)

[node name="batspawnpoint3" type="Marker2D" parent="."]
position = Vector2(601, 239)

[node name="batspawnpoint4" type="Marker2D" parent="."]
position = Vector2(327, 231)

[node name="frogspawnpoint" type="Marker2D" parent="."]
position = Vector2(1817, 284)

[node name="frogspawnpoint2" type="Marker2D" parent="."]
position = Vector2(314, 286)

[node name="stageScoreSystem" type="StaticBody2D" parent="."]

[node name="current_score" type="RichTextLabel" parent="stageScoreSystem"]
offset_left = 174.0
offset_top = 333.0
offset_right = 357.0
offset_bottom = 365.0
text = "CURRENT SCORE : 9999"
script = ExtResource("8_y1qv3")

[node name="current_wave" type="RichTextLabel" parent="stageScoreSystem"]
offset_left = 181.0
offset_top = 352.0
offset_right = 361.0
offset_bottom = 382.0
text = "CURRENT WAVE : 9999
"
script = ExtResource("9_1cex7")
